# celery-cpp-orm

./: .gitignore  CMakeLists.txt  README.md  call_task.cpp  call_task.py  test_worker.cpp  test_worker.py
